# nimubs-simulation-customers

./: README.md  sim.rviz
customer_sim_patrol_launch/: package.xml
customer_sim_patrol_launch/launch/: customer_sim_patrol.launch
customer_sim_patrol_manager/customer_sim_patrol/: CMakeLists.txt  package.xml
customer_sim_patrol_manager/customer_sim_patrol/include/customer_sim_patrol/: Patrol.h
customer_sim_patrol_manager/customer_sim_patrol/launch/: customer_sim_patrol_manager.launch  empty.launch
customer_sim_patrol_manager/customer_sim_patrol/src/: MoveBaseController.cpp  customer_sim_patrol_node.cpp
customer_sim_patrol_manager/customer_sim_patrol/waypoints/: waypoints.yaml
customer_sim_patrol_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
customer_sim_patrol_navigation/env-hooks/: 25.turtlebot-navigation.sh.em
customer_sim_patrol_navigation/launch/includes/: move_base.launch.xml  velocity_smoother.launch.xml
object_detection/src/: object_detection_node.py
