<?xml version="1.0"?>
<package>
  <name>customer_sim_patrol</name>
  <version>1.0.0</version>
  <description>customer_sim_patrol_node</description>
  <maintainer email="yakir@cogniteam.com">yakir huri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>



</package>
